--- a/Wallet.Client/wallet/src/app/navbar/navbar.component.html
+++ b/Wallet.Client/wallet/src/app/navbar/navbar.component.html
@@ -4,13 +4,12 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="#">Create New Wallet</a>
-      <a class="nav-item nav-link" href="#">Open Existing Wallet</a>
-      <a class="nav-item nav-link" href="#">Account</a>
-      <a class="nav-item nav-link" href="#">Balance</a>
-      <a class="nav-item nav-link" href="#">Send Transaction</a>
-      <a class="nav-item nav-link" href="#">Logout</a>
+      <a class="nav-item nav-link active" routerLink="/">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" routerLink="/new-wallet">Create New Wallet</a>
+      <a class="nav-item nav-link" routerLink="/existing-wallet">Open Existing Wallet</a>
+      <a class="nav-item nav-link" routerLink="/account-balance">Account Balance</a>
+      <a class="nav-item nav-link" routerLink="/send-transaction">Send Transaction</a>
+      <a class="nav-item nav-link" routerLink="/logout">Logout</a>
     </div>
   </div>
 </nav>
