Added cryptography service in Wallet client

--- a/Wallet.Client/wallet/src/app/home/home.component.html
+++ b/Wallet.Client/wallet/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<div style="text-align:center">
-  <h2>
-    Welcome to {{ title }}!
-  </h2>
+<div class="container">
+  <div style="text-align:center">
+    <h2>Welcome to {{ title }}!</h2>
+  </div>
 </div>
