--- a/Wallet.Client/wallet/src/app/new-wallet/new-wallet.component.html
+++ b/Wallet.Client/wallet/src/app/new-wallet/new-wallet.component.html
@@ -1,3 +1,33 @@
 <div class="container">
-  new-wallet works!
+  <h3>Create new wallet</h3>
+  <div class="mt-3 mb-4">
+    Generate new wallet: random private key -> public key -> address.
+  </div>
+  <button type="button" class="btn btn-primary mb-4" (click)="generateWallet()">Generate now</button>
+  <div class="container pl-0" *ngIf="walletGenerated">
+    <div class="row no-gutters">
+      <div class="col-lg-6">
+        Random private key:
+      </div>
+      <div class="col-lg-6">
+        {{generatedPrivateKey}}
+      </div>
+    </div>
+    <div class="row no-gutters">
+      <div class="col-lg-6">
+        Extracted public key:
+      </div>
+      <div class="col-lg-6">
+        {{generatedPublicKey}}
+      </div>
+    </div>
+    <div class="row no-gutters">
+      <div class="col-lg-6">
+        Extracted blockchain address:
+      </div>
+      <div class="col-lg-6">
+        {{generatedAddress}}
+      </div>
+    </div>
+  </div>
 </div>
