--- a/Wallet.Client/wallet/src/app/transaction/transaction.component.html
+++ b/Wallet.Client/wallet/src/app/transaction/transaction.component.html
@@ -1,3 +1,41 @@
 <div class="container">
-  transaction works!
+  <form (ngSubmit)="onTransactionSend()" #sendTransactionForm="ngForm">
+    <div class="form-group">
+      <label for="sender">Sender: </label>
+      <input type="text" class="form-control" id="sender" name="sender" required [(ngModel)]="transactionPostModel.from" 
+        #senderControl="ngModel" disabled>
+    </div>
+    <div class="form-group">
+      <label for="name">Recipient: </label>
+      <input type="text" class="form-control" id="recipient" name="recipient" [(ngModel)]="transactionPostModel.to" 
+        #recipientControl="ngModel" required="true" pattern="^[A-Za-z0-9]+$">
+      <div *ngIf="recipientControl.errors?.required && recipientControl.dirty" class="alert alert-danger">
+          Recipient address is required
+      </div>
+      <div *ngIf="recipientControl.errors?.pattern" class="alert alert-danger">
+          Only alphanumeric characters are allowed
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-3 mb-3">
+        <button class="btn btn-success" [disabled]="!sendTransactionForm.form.valid" (click)="onTransactionSign()">
+            Sign Transaction
+        </button>
+      </div>
+    </div>
+    <div class="form-group">
+        <textarea class="form-control" id="signed-transaction" name="signed-transaction-json" rows="5" 
+          [(ngModel)]="signedTransactionJSON" disabled></textarea>
+    </div>
+    <div class="row">
+      <div class="col-lg-3 mb-3">
+        <button type="submit" class="btn btn-success" [disabled]="sendTransactionForm.form.invalid || signedTransactionJSON == null">
+            Send Transaction
+        </button>
+      </div>
+      <div class="col-lg-9 mb-3">
+          <button class="btn btn-info" routerLink="/">Cancel</button>
+      </div>
+    </div>
+  </form>
 </div>
