modified signTransaction method so that properties have predetermined order in json string

--- a/Wallet.Client/wallet/src/app/transaction/transaction.component.html
+++ b/Wallet.Client/wallet/src/app/transaction/transaction.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-  <form (ngSubmit)="onTransactionSend()" #sendTransactionForm="ngForm">
+    <h3>Send Transaction</h3>
+  <form (ngSubmit)="onTransactionSend()" #sendTransactionForm="ngForm" *ngIf="transactionPostModel?.from">
     <div class="form-group">
       <label for="sender">Sender: </label>
       <input type="text" class="form-control" id="sender" name="sender" required [(ngModel)]="transactionPostModel.from" 
@@ -8,7 +9,7 @@
     <div class="form-group">
       <label for="name">Recipient: </label>
       <input type="text" class="form-control" id="recipient" name="recipient" [(ngModel)]="transactionPostModel.to" 
-        #recipientControl="ngModel" required="true" pattern="^[A-Za-z0-9]+$">
+        #recipientControl="ngModel" [required]="true" pattern="^[A-Za-z0-9]+$">
       <div *ngIf="recipientControl.errors?.required && recipientControl.dirty" class="alert alert-danger">
           Recipient address is required
       </div>
@@ -16,16 +17,35 @@
           Only alphanumeric characters are allowed
       </div>
     </div>
+    <div class="form-group">
+      <label for="name">Value: </label>
+      <input type="text" class="form-control" id="transaction-value" name="transaction-value" [(ngModel)]="transactionPostModel.value" 
+        #transactionValueControl="ngModel" [required]="true" pattern="^[0-9]+$">
+      <div *ngIf="transactionValueControl.errors?.required && transactionValueControl.dirty" class="alert alert-danger">
+          Transaction value is required
+      </div>
+      <div *ngIf="transactionValueControl.errors?.pattern" class="alert alert-danger">
+          Only integers are allowed
+      </div>
+    </div>
     <div class="row">
       <div class="col-lg-3 mb-3">
-        <button class="btn btn-success" [disabled]="!sendTransactionForm.form.valid" (click)="onTransactionSign()">
+        <button type="button" class="btn btn-info" [disabled]="!sendTransactionForm.form.valid" (click)="onTransactionSign()">
             Sign Transaction
         </button>
       </div>
     </div>
     <div class="form-group">
-        <textarea class="form-control" id="signed-transaction" name="signed-transaction-json" rows="5" 
+        <textarea class="form-control" id="signed-transaction" name="signed-transaction-json" rows="8" 
           [(ngModel)]="signedTransactionJSON" disabled></textarea>
+    </div>
+    <div class="form-group">
+      <label for="name">Blockchain Node: </label>
+      <input type="text" class="form-control" id="blockchain-node" name="blockchain-node" [(ngModel)]="blockchainNodeUrl" 
+        #blockchainNode="ngModel" [required]="transactionSigned">
+      <div *ngIf="blockchainNode.errors?.required && blockchainNode.dirty" class="alert alert-danger">
+          Blockchain node url is required
+      </div>
     </div>
     <div class="row">
       <div class="col-lg-3 mb-3">
@@ -34,8 +54,11 @@
         </button>
       </div>
       <div class="col-lg-9 mb-3">
-          <button class="btn btn-info" routerLink="/">Cancel</button>
+          <button type="button" class="btn btn-outline-secondary" routerLink="/">Cancel</button>
       </div>
     </div>
   </form>
+  <div class="alert alert-danger" role="alert" *ngIf="!transactionPostModel?.from">
+    Please unlock your wallet!
+  </div>
 </div>
