--- a/Wallet.Client/wallet/src/app/transaction/transaction.component.html
+++ b/Wallet.Client/wallet/src/app/transaction/transaction.component.html
@@ -19,7 +19,7 @@
     </div>
     <div class="form-group">
       <label for="name">Value: </label>
-      <input type="text" class="form-control" id="transaction-value" name="transaction-value" [(ngModel)]="transactionPostModel.value" 
+      <input type="number" class="form-control" id="transaction-value" name="transaction-value" [(ngModel)]="transactionPostModel.value" 
         #transactionValueControl="ngModel" [required]="true" pattern="^[0-9]+$">
       <div *ngIf="transactionValueControl.errors?.required && transactionValueControl.dirty" class="alert alert-danger">
           Transaction value is required
