--- a/Wallet.Client/wallet/src/app/account-balance/account-balance.component.html
+++ b/Wallet.Client/wallet/src/app/account-balance/account-balance.component.html
@@ -6,8 +6,12 @@
     </div>
     <div class="input-group mb-3">
       <label for="blockchainNode">Blockchain Node:</label>
-      <input [(ngModel)]="blockchainNodeUrl" id="blockchainNode" class="form-control" placeholder="Blockchain node" 
-        aria-label="Blockchain node">
+      <input [(ngModel)]="blockchainNodeUrl"
+             id="blockchainNode"
+             class="form-control"
+             placeholder="Blockchain node"
+             aria-label="Blockchain node"
+             value="http://localhost:5000">
     </div>
     <div>
         <button type="button" class="btn btn-primary mb-4" (click)="displayBalance()">Display Balance</button>
