Send new block to peers, bugfixes

--- a/Wallet.Client/wallet/src/app/transaction/transaction.component.html
+++ b/Wallet.Client/wallet/src/app/transaction/transaction.component.html
@@ -1,5 +1,9 @@
 <div class="container">
-    <h3>Send Transaction</h3>
+  <h3>Send Transaction</h3>
+
+  <div class="alert alert-success" role="alert" *ngIf="successMessage">
+    {{ successMessage }}
+  </div>
 
   <div class="alert alert-danger" role="alert" *ngIf="errorMessage">
     {{ errorMessage }}
