--- a/Wallet.Client/wallet/src/app/account-balance/account-balance.component.html
+++ b/Wallet.Client/wallet/src/app/account-balance/account-balance.component.html
@@ -10,8 +10,7 @@
              id="blockchainNode"
              class="form-control"
              placeholder="Blockchain node"
-             aria-label="Blockchain node"
-             value="http://localhost:5000">
+             aria-label="Blockchain node">
     </div>
     <div>
         <button type="button" class="btn btn-primary mb-4" (click)="displayBalance()">Display Balance</button>
